# esp32-curso

./: README.md
ej1-wifi-sta/: CMakeLists.txt  README.md
ej1-wifi-sta/main/: main.c
ej1-wifi-sta/main/api_wifi/: api_wifi.c  api_wifi.h
ej2-wifi-ap/: CMakeLists.txt  README.md
ej2-wifi-ap/main/: main.c
ej2-wifi-ap/main/api_wifi/: api_wifi.c  api_wifi.h
ej3-wifi-ap-sta/: CMakeLists.txt  README.md
ej3-wifi-ap-sta/main/: CMakeLists.txt  main.c
ej3-wifi-ap-sta/main/api_wifi/: api_wifi.h
ej4-spiffs/: CMakeLists.txt  README.md
ej4-spiffs/main/: CMakeLists.txt  main.c
ej4-spiffs/main/api_spiffs/: api_spiffs.c  api_spiffs.h
ej4-spiffs/www/: index.html  main.js
ej5-static-web-app/: CMakeLists.txt  README.md  partitions.csv
ej5-static-web-app/main/: CMakeLists.txt  main.c
ej5-static-web-app/main/api_rest/: api_rest.c
ej6-dynamic-web-app-dht11/: CMakeLists.txt  README.md
ej6-dynamic-web-app-dht11/main/: CMakeLists.txt  main.c
ej6-dynamic-web-app-dht11/main/api_dht11/: api_dht11.c  api_dht11.h
ej6-dynamic-web-app-dht11/main/api_rest/: api_rest.c
ej6-dynamic-web-app-dht11/www/: index.html  main.js
ej7-dynamic-web-app-led/: CMakeLists.txt  README.md
ej7-dynamic-web-app-led/main/: CMakeLists.txt  main.c
ej7-dynamic-web-app-led/main/api_led/: api_led.c  api_led.h
ej7-dynamic-web-app-led/main/api_rest/: api_rest.c  api_rest.h
ej7-dynamic-web-app-led/main/api_wifi/: api_wifi.c
ej7-dynamic-web-app-led/www/: index.html  main.js
